--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 <div class="navbar-header">
                     <!-- Mobile Toggle Menu Button -->
                     <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-                    <a href="http://www.microsoftlpu.com"><img src="images/logo.png" width="160" height="60"></a>
+                    <a href="http://www.microsoftlpu.com"><img loading="lazy" src="images/logo.png" width="160" height="60"></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -109,7 +109,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 <div class="fh5co-person">
                     <div class="col-md-5">
                         <div class="text-center to-animate">
-                            <img src="images/mstc.jpg" alt="Image">
+                            <img loading="lazy" src="images/mstc.jpg" alt="Image">
                         </div>
                     </div>
                     <div class="space"></div>
@@ -139,7 +139,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                     </div>
                     <div class="col-md-5">
                         <div class="text-center to-animate">
-                            <img src="images/MSP.png" alt="Image">
+                            <img loading="lazy" src="images/MSP.png" alt="Image">
                         </div>
                     </div>
                 </div>
@@ -157,7 +157,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
             <div class="row">
                 <div class="col-md-3 col-sm-12 col-xs-12">
                     <a href="imagine-talk.html" class="fh5co-project-item to-animate">
-                        <img src="images/1.jpg" alt="Image" class="img-responsive">
+                        <img loading="lazy" src="images/1.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="section-heading text-center to-animate">
                         <h3>Imagine Talks 1.0</h3>
@@ -165,7 +165,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
                 <div class="col-md-3 col-sm-12 col-xs-12">
                     <a href="github-workshop.html" class="fh5co-project-item to-animate">
-                        <img src="images-2/003.jpg" alt="Image" class="img-responsive">
+                        <img loading="lazy" src="images-2/003.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="section-heading text-center to-animate">
                         <h3>Git &amp; Github Session</h3>
@@ -173,7 +173,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
                     <div class="col-md-3 col-sm-12 col-xs-12">
                         <a href="mshacks.html" class="fh5co-project-item to-animate">
-                            <img src="images/mshacks/4.webp" alt="Image" class="img-responsive">
+                            <img loading="lazy" src="images/mshacks/4.webp" alt="Image" class="img-responsive">
                         </a>
                         <div class="section-heading text-center to-animate">
                             <h3>Microsoft Hackathon 1.0</h3>
@@ -181,7 +181,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                     </div>
                     <div class="col-md-3 col-sm-12 col-xs-12">
                         <a href="imagine-camp-gallery.html" class="fh5co-project-item to-animate">
-                            <img src="images/imagine_camp/1.jpg" alt="Image" class="img-responsive">
+                            <img loading="lazy" src="images/imagine_camp/1.jpg" alt="Image" class="img-responsive">
                         </a>
                         <div class="section-heading text-center to-animate">
                             <h3>Imagine Camp</h3>
@@ -191,7 +191,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                   <div class="row">
                 <div class="col-md-3 col-md-offset-2 col-sm-12 col-xs-12">
                     <a href="hack-a-day.html" class="fh5co-project-item to-animate">
-                        <img src="images/hack-a-day/0.jpg" alt="Image" class="img-responsive">
+                        <img loading="lazy" src="images/hack-a-day/0.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="section-heading text-center to-animate">
                         <h3>Hack-A-Day</h3>
@@ -199,7 +199,7 @@ support of Microsoft at back , and your good wishes we wish to energize today's 
                 </div>
                 <div class="col-md-3 col-md-offset-2 col-sm-12 col-xs-12">
                     <a href="azure.html" class="fh5co-project-item to-animate">
-                        <img src="images/azure/0.JPG" alt="Image" class="img-responsive">
+                        <img loading="lazy" src="images/azure/0.JPG" alt="Image" class="img-responsive">
                     </a>
                     <div class="section-heading text-center to-animate">
                         <h3>Microsoft Azure Bootcamp</h3>
